<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CareProviderProblemView">

    <Button
        android:id="@+id/add_comment_button"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:onClick="addCareProviderComment"
        android:text="@string/provider_add_comment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/scrollView3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/scrollView3" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="368dp"
        android:layout_height="551dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/viewTitle"
                android:layout_width="303dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="76dp"
                android:text="@string/title_care_view"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="50dp"
                tools:layout_editor_absoluteY="75dp" />

            <TextView
                android:id="@+id/viewDate"
                android:layout_width="303dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="131dp"
                android:text="@string/date_started_care_view"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="50dp"
                tools:layout_editor_absoluteY="75dp" />

            <TextView
                android:id="@+id/viewDes"
                android:layout_width="303dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/description_care_view"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="50dp"
                tools:layout_editor_absoluteY="32dp" />

            <TextView
                android:id="@+id/viewRecord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="325dp"
                android:text="@string/record_strict_care_view"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="124dp"
                tools:layout_editor_absoluteY="212dp" />

            <TextView
                android:id="@+id/subRecords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="375dp"
                android:text="@string/a_record_care_view"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="124dp"
                tools:layout_editor_absoluteY="212dp" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/viewTitle"
                android:layout_alignParentTop="true"
                android:layout_marginTop="14dp"
                android:onClick="viewProblemsPhotos"
                app:srcCompat="@drawable/pic32" />

        </RelativeLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>